task_5/allow-dns.yaml
# Разрешаем всем подам обращаться к CoreDNS.
# Без этого правила резолвинг имён сервисов невозможен
# при наличии Egress deny.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
